--- a/_project_starter_/index.html
+++ b/_project_starter_/index.html
@@ -7,7 +7,26 @@
     <title>My Project</title>
   </head>
   <body>
-    <h1>Project Starter</h1>
+    <header>
+      <h1>Project Starter</h1>
+    </header>
+    <main>
+      <div class="card open" style="background-image: url('https://images.unsplash.com/photo-1558979158-65a1eaa08691?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80')">
+        <h3>Title</h3>
+      </div>
+      <div class="card" style="background-image: url('https://images.unsplash.com/photo-1558979158-65a1eaa08691?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80')">
+        <h3>Title</h3>
+      </div>
+      <div class="card" style="background-image: url('https://images.unsplash.com/photo-1558979158-65a1eaa08691?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80')">
+        <h3>Title</h3>
+      </div>
+      <div class="card" style="background-image: url('https://images.unsplash.com/photo-1558979158-65a1eaa08691?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80')">
+        <h3>Title</h3>
+      </div>
+      <div class="card" style="background-image: url('https://images.unsplash.com/photo-1558979158-65a1eaa08691?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80')">
+        <h3>Title</h3>
+      </div>
+    </main>
     <script src="script.js"></script>
   </body>
 </html>
